--- a/win32/convarch/convarch.vcxproj.filters.in
+++ b/win32/convarch/convarch.vcxproj.filters.in
@@ -228,6 +228,12 @@
     <ClInclude Include="..\..\src\lib\crypto\BotanUtil.h">
       <Filter>Crypto Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\lib\crypto\Botan_ecb.h">
+      <Filter>Crypto Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\lib\crypto\Botan_rounding.h">
+      <Filter>Crypto Header Files</Filter>
+    </ClInclude>
 @END BOTAN
     <ClInclude Include="..\..\src\lib\crypto\CryptoFactory.h">
       <Filter>Crypto Header Files</Filter>
@@ -649,6 +655,9 @@
       <Filter>Crypto Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\lib\crypto\BotanUtil.cpp">
+      <Filter>Crypto Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\lib\crypto\Botan_ecb.cpp">
       <Filter>Crypto Source Files</Filter>
     </ClCompile>
 @END BOTAN
