- more temporary files that are not git ignored   - ROOT is a directory used on the new jenkins environment - Add support for building on Slackware Linux distribution - Botan version no longer available at that URL in building script - let cpp unit tests output for XML file to be picked up be Jenkins   environment.

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,14 @@ test-driver
 *.log
 *.trs
 
+# Temporary files
+*~
+
+# Building directories
+build
+Botan-*
+ROOT
+
 # Specifics
 softhsm2.module
 src/bin/common/.dirstamp
