Issue #297: Fix build with cppunit
@CPPUNIT_CFLAGS@ was not correctly used.
So the cppunit header files were not found if not installed in the
default folder.

--- a/src/lib/object_store/test/Makefile.am
+++ b/src/lib/object_store/test/Makefile.am
@@ -8,9 +8,8 @@ AM_CPPFLAGS = 			-I$(srcdir)/.. \
 				-I$(srcdir)/../../pkcs11 \
 				-I$(srcdir)/../../session_mgr \
 				-I$(srcdir)/../../slot_mgr \
+				@CPPUNIT_CFLAGS@ \
 				@CRYPTO_INCLUDES@
-
-AM_CFLAGS =			@CPPUNIT_CFLAGS@
 
 check_PROGRAMS =		objstoretest
 
