Issue #283: More detailed error messages when initializing SoftHSM.

--- a/src/lib/common/softhsm2.conf.in
+++ b/src/lib/common/softhsm2.conf.in
@@ -5,3 +5,6 @@ objectstore.backend = file
 
 # ERROR, WARNING, INFO, DEBUG
 log.level = INFO
+
+# If CKF_REMOVABLE_DEVICE flag should be set
+slots.removable = false
