use warning messages for failing to enumerate store
In systems which use p11-kit to register all available PKCS#11
modules, an unconfigured softhsm will always fail to load and
print the following to syslog:
Jun 26 13:29:05 host wget[6407]: ObjectStore.cpp(59): Failed to enumerate object in /var/lib/softhsm/tokens
Jun 26 13:29:05 host wget[6407]: SoftHSM.cpp(476): Could not load the object store

That can be output to any command utilizing p11-kit (e.g., applications
using gnutls or engine_pkcs11 applications).

To avoid that unnecessary print, I decreased the log level of
the message to warning and set the default configuration to
print only error messages to syslog.

Signed-off-by: Nikos Mavrogiannopoulos <nmav@redhat.com>

--- a/src/lib/common/softhsm2.conf.in
+++ b/src/lib/common/softhsm2.conf.in
@@ -4,7 +4,7 @@ directories.tokendir = @softhsmtokendir@
 objectstore.backend = file
 
 # ERROR, WARNING, INFO, DEBUG
-log.level = INFO
+log.level = ERROR
 
 # If CKF_REMOVABLE_DEVICE flag should be set
 slots.removable = false
