Added more compile flags and build options
Features:
* libsqlite3.so and sqlite3.h detection
* abilitity to build softhsm2-migrate binary
* option to build WITH_OBJECTSTORE_BACKEND_DB (currently fails if
./configure is not invoked with same parameters first)
* support for m4/acx_64bit.m4 and m4/acx_visibility.m4
* added rest of ./configure options to cmake

--- a/src/bin/migrate/CMakeLists.txt
+++ b/src/bin/migrate/CMakeLists.txt
@@ -15,5 +15,5 @@ if(WITH_SQLITE3)
 
     include_directories(${INCLUDE_DIRS})
     add_executable(${PROJECT_NAME} ${SOURCES})
-    target_link_libraries(${PROJECT_NAME} ${SQLITE3_LIBS} ${YIELD_LIB})
+    target_link_libraries(${PROJECT_NAME} ${SQLITE3_LIBS} ${YIELD_LIB} ${CMAKE_DL_LIBS})
 endif(WITH_SQLITE3)
