Compiler Option / config.h generation
- added support for more compiler options
- added ability to compile and test for openssl properties (i.e. mirros
acx_openssl_*.m4 files)
- added ability to generate config.h without help of autotools

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -20,7 +20,7 @@ set(INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/common
                  ${CMAKE_CURRENT_SOURCE_DIR}/pkcs11
                  ${CMAKE_CURRENT_SOURCE_DIR}/session_mgr
                  ${CMAKE_CURRENT_SOURCE_DIR}/slot_mgr
-                 ${CMAKE_SOURCE_DIR}
+                 ${CMAKE_BINARY_DIR}
                  )
 
 include_directories(${INCLUDE_DIRS})
