Working config.h generation with CMake
- ported most acx_*.m4 files
- generate a config.h file that is almost identical to one generated by
autools
- all libraries builds
- all test pass

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,4 +65,7 @@ include(GenerateExportHeader)
 # Enable CTest
 enable_testing()
 
+# config.h include path
+include_directories(${CMAKE_BINARY_DIR})
+
 add_subdirectory(src)
