--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -75,5 +75,10 @@ if(BUILD_TESTS)
 endif(BUILD_TESTS)
 
 ###############################################################################
-# Install / Packaging
+# Install
 ###############################################################################
+install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}-static
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/softhsm
+        )
+
+install(DIRECTORY DESTINATION ${CMAKE_INSTALL_LOCALSTATEDIR}/lib/softhsm/tokens)
