--- a/src/bin/util/CMakeLists.txt
+++ b/src/bin/util/CMakeLists.txt
@@ -29,3 +29,11 @@ endif(WITH_BOTAN)
 include_directories(${INCLUDE_DIRS})
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} softhsm2-static ${CRYPTO_LIBS} ${SQLITE3_LIBS} ${CMAKE_DL_LIBS})
+
+install(TARGETS ${PROJECT_NAME}
+        DESTINATION ${CMAKE_INSTALL_BINDIR}
+        )
+
+install(FILES ${PROJECT_NAME}.1
+        DESTINATION ${CMAKE_INSTALL_MANDIR}/man1
+        )
