--- a/src/lib/session_mgr/test/CMakeLists.txt
+++ b/src/lib/session_mgr/test/CMakeLists.txt
@@ -6,6 +6,6 @@ set(SOURCES sessionmgrtest.cpp
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_executable(${PROJECT_NAME} ${SOURCES})
-target_link_libraries(${PROJECT_NAME} softhsm2-static ${CRYPTO_LIBS} ${CPPUNIT_LIBS})
+target_link_libraries(${PROJECT_NAME} softhsm2-static ${CRYPTO_LIBS} ${CPPUNIT_LIBS} ${SQLITE3_LIBS})
 
 add_test(${PROJECT_NAME} ${PROJECT_NAME})
