--- a/src/lib/crypto/test/CMakeLists.txt
+++ b/src/lib/crypto/test/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SOURCES cryptotest.cpp
             DSATests.cpp
             ECDHTests.cpp
             ECDSATests.cpp
+            EDDSATests.cpp
             GOSTTests.cpp
             HashTests.cpp
             MacTests.cpp
