Issue #362: Build with different crypto backend

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,12 @@ option(ENABLE_PEDANTIC "Enable pedantic compile mode" OFF)
 option(ENABLE_STRICT "Enable strict compile mode" ON)
 option(ENABLE_SHARED "Build shared libraries" ON)
 option(ENABLE_STATIC "Build static libraries" ON)
-option(WITH_BOTAN "Compile with support of BOTAN" OFF)
 option(WITH_OBJECTSTORE_BACKEND_DB "Build with object store backend database (SQLite3)" OFF)
 option(WITH_MIGRATE "Build migration tool. Requires SQLite3." OFF)
-option(WITH_OPENSSL "Compile with support of OpenSSL" ON)
 option(WITH_P11_KIT "Build with p11-kit module" OFF)
 option(WITH_SQLITE3 "Compiles with support of SQLite3" OFF)
+set(WITH_CRYPTO_BACKEND "openssl"
+    CACHE STRING "Select crypto backend (openssl|botan)")
 
 if(WITH_OBJECTSTORE_BACKEND_DB)
     set(HAVE_OBJECTSTORE_BACKEND_DB 1)
