--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -20,6 +20,7 @@ set(INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/common
                  ${CMAKE_CURRENT_SOURCE_DIR}/pkcs11
                  ${CMAKE_CURRENT_SOURCE_DIR}/session_mgr
                  ${CMAKE_CURRENT_SOURCE_DIR}/slot_mgr
+                 ${CRYPTO_INCLUDES}
                  )
 
 include_directories(${INCLUDE_DIRS})
