--- a/src/lib/crypto/test/CMakeLists.txt
+++ b/src/lib/crypto/test/CMakeLists.txt
@@ -1,5 +1,17 @@
 project(cryptotest)
 
+set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/..
+                 ${PROJECT_SOURCE_DIR}/../..
+                 ${PROJECT_SOURCE_DIR}/../../common
+                 ${PROJECT_SOURCE_DIR}/../../data_mgr
+                 ${PROJECT_SOURCE_DIR}/../../object_store
+                 ${PROJECT_SOURCE_DIR}/../../pkcs11
+                 ${PROJECT_SOURCE_DIR}/../../session_mgr
+                 ${PROJECT_SOURCE_DIR}/../../slot_mgr
+                 ${CPPUNIT_INCLUDES}
+                 ${CRYPTO_INCLUDES}
+                 )
+
 set(SOURCES cryptotest.cpp
             AESTests.cpp
             DESTests.cpp
@@ -19,7 +31,8 @@ set(SOURCES cryptotest.cpp
             randtest.c
             )
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${INCLUDE_DIRS})
+
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} softhsm2-static ${CRYPTO_LIBS} ${CPPUNIT_LIBS})
 
