--- a/src/bin/migrate/CMakeLists.txt
+++ b/src/bin/migrate/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(softhsm2-migrate)
 
-if(WITH_SQLITE3)
+if(BUILD_MIGRATE)
     set(INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/../../lib/pkcs11
                      ${PROJECT_SOURCE_DIR}/../common
                      ${SQLITE3_INCLUDES}
@@ -15,4 +15,12 @@ if(WITH_SQLITE3)
     include_directories(${INCLUDE_DIRS})
     add_executable(${PROJECT_NAME} ${SOURCES})
     target_link_libraries(${PROJECT_NAME} ${SQLITE3_LIBS} ${YIELD_LIB} ${CMAKE_DL_LIBS})
-endif(WITH_SQLITE3)
+
+    install(TARGETS ${PROJECT_NAME}
+            DESTINATION ${CMAKE_INSTALL_BINDIR}
+            )
+
+    install(FILES ${PROJECT_NAME}.1
+            DESTINATION ${CMAKE_INSTALL_MANDIR}/man1
+            )
+endif(BUILD_MIGRATE)
